--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-<!--    <modules>-->
-<!--        <module>client</module>-->
-<!--        <module>server</module>-->
-<!--        <module>general</module>-->
-<!--    </modules>-->
+    <modules>
+        <module>client</module>
+        <module>server</module>
+        <module>general</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,19 +21,6 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>commons-dbutils</groupId>
-            <artifactId>commons-dbutils</artifactId>
-            <version>1.5</version>
-        </dependency>
-        <dependency>
-            <!-- Database -->
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.4.1</version>
-        </dependency>
-
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
